--- a/src/main/resources/static/css/main/main.css
+++ b/src/main/resources/static/css/main/main.css
@@ -27,7 +27,7 @@ body, html {
     display: flex;
     align-items: center;
 }
-.search-box input {
+.search-box-input{
     border: none;
     width:500px;
     padding: 10px;
@@ -35,7 +35,7 @@ body, html {
     border-radius: 5px 0 0 5px;
     outline: none;
 }
-.search-box button {
+.search-box-submit {
     background-color: #007bff;
     color: white;
     border: none;
