--- a/src/main/resources/templates/air/roundtrip_return.html
+++ b/src/main/resources/templates/air/roundtrip_return.html
@@ -16,28 +16,39 @@
     </div>
 </header>
 <main>
-    <div class="flight-list">
-        <div th:each="air : ${airResults}" class="flight-item">
+    <div class="air-list">
+        <div th:each="air : ${airs}" class="air-item">
             <div class="airline-logo" th:text="${air.airCompany}">항공사 로고</div>
-            <div class="flight-details">
-                <div class="flight-time">
-                    <span th:text="${#temporals.format(air.departureDateTime, 'yyyy-MM-dd HH:mm')}">출발 날짜 및 시간</span>
+            <div class="air-details">
+                <div class="air-time">
+                    <span th:text="${#dates.format(air.departureDateTime, 'yyyy-MM-dd HH:mm')}">출발 날짜 및 시간</span>
                     <span class="arrow">→</span>
-                    <span th:text="${#temporals.format(air.arrivalDateTime, 'yyyy-MM-dd HH:mm')}">도착 날짜 및 시간</span>
+                    <span th:text="${#dates.format(air.arrivalDateTime, 'yyyy-MM-dd HH:mm')}">도착 날짜 및 시간</span>
                 </div>
-                <div class="flight-route">
+                <div class="air-route">
                     <span th:text="${air.departureAirport}">출발 공항</span>
                     <span th:text="${air.arrivalAirport}">도착 공항</span>
                 </div>
-                <div class="flight-number" th:text="${air.airlineNO}">항공편 번호</div>
+                <div class="air-number" th:text="${air.airlineNO}">항공편 번호</div>
             </div>
-            <div class="flight-price">
+            <div class="air-price">
                 <span th:text="${#numbers.formatDecimal(air.airPrice, 0, 'COMMA', 0, 'POINT')}">가격</span>원
             </div>
-            <button class="select-air" th:attr="data-airno=${air.airlineNO}" onclick="selectReturnAir(this.getAttribute('data-airno'))">선택</button>
+            <button class="select-air" th:attr="data-airlineNo=${air.airlineNO}">선택</button>
         </div>
     </div>
 </main>
-<script th:src="@{/js/airplane/roundtrip_return.js}"></script>
+
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    var departure = /*[[${departure}]]*/ '';
+    var destination = /*[[${destination}]]*/ '';
+    var departureDate = /*[[${departureDate}]]*/ '';
+    var returnDate = /*[[${returnDate}]]*/ '';
+    var selectedAirNo = /*[[${selectedAirNo}]]*/ '';
+    /*]]>*/
+</script>
+<script src="/js/airplane/roundtrip_return.js" defer></script>
+
 </body>
 </html>
