--- a/src/main/resources/static/css/schedule/schedule.css
+++ b/src/main/resources/static/css/schedule/schedule.css
@@ -86,7 +86,7 @@ body, html {
 .show-form-btn {
     display: block;
     height: 50px;
-    margin: 20px auto;
+    margin: 40px;
 
     background-color: #4CAF50;
     color: white;
