일반회원 관리자 구매항목 항공, 패키지 추가

--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -26,7 +26,7 @@
                     <tr>
                         <th>구분</th>
                         <th>구매항목</th>
-                        <th>사용시간</th>
+                        <th>사용일</th>
                         <th>인원수</th>
                         <th>결제일</th>
                     </tr>
