--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -28,7 +28,7 @@
                 <li><a href="/admin">회원관리</a></li>
                 <li><a href="/admin/business">기업관리</a></li>
                 <li><a href="/admin/items">상품관리</a></li>
-                <li><a href="/amin/orders">결제관리</a></li>
+                <li><a href="/admin/orders">결제관리</a></li>
             </ul>
         </nav>
 </header>
