--- a/src/main/resources/templates/admin/adminOrders.html
+++ b/src/main/resources/templates/admin/adminOrders.html
@@ -34,15 +34,11 @@
 </header>
 <body>
 <main>
-    <form action="/admin/business/search" method="get" >
+    <form action="/admin/user" method="get" >
         <div class="search_content">
             <select name="option">
                 <option value="">전체</option>
-                <option value="binID">아이디</option>
-                <option value="binName">상호명</option>
-                <option value="binCode">사업자등록번호</option>
-                <option value="binTell">대표전화번호</option>
-                <option value="binEmail">대표이메일</option>
+                <option value="">항공명</option>
             </select>
             <input class="search_input" id="data" name="data" placeholder="검색어를 입력하세요">
             <input type="submit" class="search_btn" value="검색">
@@ -53,33 +49,35 @@
     <div>
         <table class="table_content">
             <tr>
-                <th>아이디</th>
-                <th>분류</th>
-                <th>상호명</th>
-                <th>사업자등록번호</th>
-                <th>대표전화번호</th>
-                <th>대표이메일</th>
-                <th>관리</th>
+                <th>회원아이디</th>
+                <th>결제항목</th>
+                <th>일정명</th>
+                <th>수량</th>
+                <th>사용일</th>
+                <th>결제일</th>
+                <th>결제금액</th>
+                <th>상품보기</th>
             </tr>
-            <tr th:each="vo : ${vo}">
-                <td>[[${vo.getBinID}]]</td>
-                <th:block th:if="${vo.getBinCate == '1'}">
+            <tr th:each="orders : ${orders}">
+                <td>[[${orders.getUserId}]]</td>
+                <th:block th:if="${#strings.substring(orders.getComNO, 0, 1) == 'A'}">
                     <td>항공</td>
                 </th:block>
-                <th:block th:if="${vo.getBinCate == '2'}">
+                <th:block th:if="${#strings.substring(orders.getComNO, 0, 1) == 'h'}">
                     <td>숙박</td>
                 </th:block>
-                <th:block th:if="${vo.getBinCate == '3'}">
+                <th:block th:if="${#strings.substring(orders.getComNO, 0, 1) == 'T'}">
                     <td>티켓</td>
                 </th:block>
-                <th:block th:if="${vo.getBinCate == '4'}">
+                <th:block th:if="${#strings.substring(orders.getComNO, 0, 1) == 'P'}">
                     <td>패키지</td>
                 </th:block>
-                <td>[[${vo.getBinName}]]</td>
-                <td>[[${vo.getBinCode}]]</td>
-                <td>[[${vo.getBinTell}]]</td>
-                <td>[[${vo.getBinEmail}]]</td>
-                <td><input type="button" class="item_btn" th:onclick="binDetail([[${vo.getBinID}]]);" value="관리"></td>
+                <td>[[${orders.getTitle}]]</td>
+                <td>[[${orders.getTotalCnt}]]</td>
+                <td>[[${#dates.format(orders.getUseDate, 'yyyy-MM-dd')}]]</td>
+                <td>[[${#dates.format(orders.getOrderDate, 'yyyy-MM-dd')}]]</td>
+                <td>[[${#numbers.formatInteger(orders.getPrice, 3, 'COMMA')}]]</td>
+                <td><input type="button" class="item_btn" onclick="#" value="보기"></td>
             </tr>
         </table>
     </div>
