--- a/src/main/resources/templates/nation/natDetaile.html
+++ b/src/main/resources/templates/nation/natDetaile.html
@@ -61,7 +61,19 @@
                 <p>관련된 게시글이 없습니다.</p>
             </div>
         </div>
+        <div class="package" >
+            <div class="package_top">
+                <h3 class="package_text">현재 뜨고 있는 패키지상품들</h3>
+            </div>
+            <div class="package_container" >
+                <button type="button" class="package_btn" th:each="packages : ${packages}">
+                    <img th:src="${packages.imageUrl}" th:alt="${packages.packageTitle}">
+                    <h3 th:text="${packages.packageTitle}">방콕&파타야 5/6</h3>
+                </button>
+            </div>
+        </div>
     </div>
+
 </main>
 <div th:replace="header_foter/foter :: foter"></div>
 <script th:inline="javascript">
