--- a/src/main/resources/templates/nation/natDetaile.html
+++ b/src/main/resources/templates/nation/natDetaile.html
@@ -70,7 +70,7 @@
             <div class="package_container" >
                 <button type="button" class="package_btn" th:each="packages : ${packages}">
                     <img th:src="${packages.imageUrl}" th:alt="${packages.packageTitle}">
-                    <h3 th:text="${packages.packageTitle}">방콕&파타야 5/6</h3>
+                    <h3 th:text="${packages.packageTitle}"></h3>
                 </button>
             </div>
         </div>
