--- a/src/main/resources/templates/nation/nation.html
+++ b/src/main/resources/templates/nation/nation.html
@@ -5,6 +5,8 @@
     <title>나라 추천</title>
     <link rel="stylesheet" href="/css/header_foter/header.css">
     <link rel="stylesheet" href="/css/header_foter/foter.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="/css/main/nation.css">
     <script src="/js/includeHTML.js" defer></script>
@@ -62,14 +64,14 @@
         </div>
     </div>
 
-    <div class="package">
+    <div class="package" >
         <div class="package_top">
             <h3 class="package_text">현재 뜨고 있는 패키지상품들</h3>
         </div>
-        <div class="package_container">
-            <button type="button" class="package_btn">
-                <img src="/imgs/파타야.jpg" alt="도쿄">
-                <h3>방콕&파타야 5/6</h3>
+        <div class="package_container" >
+            <button type="button" class="package_btn" th:each="packages : ${packages}">
+                <img th:src="${packages.imageUrl}" th:alt="${packages.packageTitle}">
+                <h3 th:text="${packages.packageTitle}"></h3>
             </button>
         </div>
     </div>
@@ -82,6 +84,22 @@
         window.location.href = `/nation/detail/${natNO}`;
     }
 
+</script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- Slick JS -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+<script>
+    $(document).ready(function(){
+        $('.package_container').slick({
+            slidesToShow: 3,
+            slidesToScroll: 1,
+            infinite: true,
+            dots: true,
+            arrows: true,
+            autoplay: true,
+            autoplaySpeed: 2000
+        });
+    });
 </script>
 </body>
 </html>
